--- a/actividad6/style.css
+++ b/actividad6/style.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Zetta&display=swap');
 html,body{height:100%}
-body{padding: 2em 2em;}
+body{padding: 2em 2em; font-size: 14px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: gray}
 h1{font-family: 'Lexend Zetta', sans-serif; 
 color: rgb(6, 7, 5); 
 text-align: center; 
 text-transform: uppercase;
 text-shadow: 0px 2px rgb(172, 172, 172);}
-p{font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: gray}
 .epigrafe {color: black; font-size: 12px;}
 img {max-width: 100%; height: auto;}
+p {text-align: center;}
+.end {color: gray; font-size: 10;}
